# Virgo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_fft_circuit.cpp  create_table.py  get_root_of_unity.py  linearPC  linear_code  setup.sh
include/VPD/: fri.h  linearPC.h
include/infrastructure/: RS_polynomial.h  constants.h  fiat_shamir.h  merkle_tree.h  my_hhash.h
include/linear_gkr/: circuit_fast_track.h  d_prover.h  d_verifier.h  prime_field.h  prover.h  prover_fast_track.h  verifier.h  verifier_fast_track.h  zk_prover.h  zk_verifier.h
include/poly_commitment/: README.md  poly_commit.h
src/: encode_test.cpp
src/VPD/: fft_circuit_GKR.cpp  fri.cpp  linearPC.cpp  linearPC_test.cpp  vpd_verifier.cpp
src/distributed_gkr/: d_prover.cpp  d_verifier.cpp  main.cpp
src/infrastructure/: RS_polynomial.cpp  fiat_shamir.cpp  merkle_tree.cpp
src/linear_gkr/: README.md  main.cpp  main_fast_track.cpp  main_zk.cpp  prime_field.cpp  prover.cpp  prover_fast_track.cpp  verifier.cpp  verifier_fast_track.cpp  zk_prover.cpp  zk_verifier.cpp
src/poly_commitment/: poly_commit.cpp
tests/: README.md  mm.cpp
tests/SHA256/: build.py  build.sh  parser_sha_data_parallel.cpp  psdp  run.py  sha256gen.py
tests/lanczos/: build.py  build.sh  lanczos2.py  parser_sha_data_parallel.cpp  run.py
tests/matmul/: build.py  gen.cpp  run.py  test.c
